Add some Liquid Enchantment recipes and fix crashing 添加液态魔咒配方并修复崩溃 (#4353)
* change(HasCauldron): port HasCauldron from ResourceLocation-based to Fluid-based

* feat(recipe): add more liquid enchantment recipes

resolved #4340

* fix: fix liquid enchantment crashing

fixed #4346

* change(liquid_enchantment): change the tint of liquid_enchantment